[gd_scene load_steps=2 format=3 uid="uid://d3jrqfru86t21"]

[ext_resource type="Script" path="res://UI/Menu/GlobalSettingUI.gd" id="1_en5pj"]

[node name="GlobalSettingUI" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
script = ExtResource("1_en5pj")

[node name="AttrName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
scrollable = false

[node name="Change" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "="

[node name="Refresh" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "!!"

[node name="Reset" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "R"

[connection signal="pressed" from="Change" to="." method="_on_change_pressed"]
[connection signal="pressed" from="Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
